[package]
name = "cachette"
version = "0.1.0"
authors = ["Charles Ede <charlieede01@gmail.com>"]
edition = "2018"

[[bin]]
name = "cachette"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13.0", features = ["macros", "sync"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
reqwest = { version = "0.11.6", features = ["rustls","blocking", "json"] }
futures = "0.3.8"
log = "0.4.13"
env_logger = "0.8.2"
cfg-if = "1.0.0"
openssl = { version = "0.10", features = ["vendored"] }
bytes = "1.0"

[features]
arm64 = []
dev = []
